--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -9,7 +9,6 @@
     <link th:href="@{/css/bootstrap-table.min.css}" href="../static/css/bootstrap-table.min.css" rel="stylesheet">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_990690_11f0h51igp8f.css">
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
-
     <script th:src="@{/js/jquery-3.3.1.min.js}" src="../static/js/jquery-3.3.1.min.js"></script>
     <script th:src="@{/js/jquery.cookie.js}" src="../static/js/jquery.cookie.js"></script>
     <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
@@ -35,8 +34,6 @@
                     contentType: "application/json; charset=utf-8",
                     success: function (result) {
                         if (result.message === "success"){
-                            $('#cart').attr('href','/cart?user_id=' + result.contents.user_id);
-                            $('#orders').attr('href','/orders?user_id=' + result.contents.user_id);
                             $('#phone').attr('value', result.contents.phone);
                             $('#nickname').attr('value', result.contents.nickname);
                             $('#realname').attr('value', result.contents.realname);
@@ -58,7 +55,6 @@
         $(function(){
             $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
                 var activeTab = $(e.target).text().trim();
-                var previousTab = $(e.relatedTarget).text().trim();
                 if (activeTab === 'Profile'){
                     getProfile();
                 }
@@ -123,6 +119,16 @@
                 }
             })
         });
+
+        function init(){
+            // $('#cart').attr('href','/cart?user_id=' + $.getUrlParam('user_id'));
+            $('#cart').click(function () {
+                alert("Coming soon...")
+            });
+            $('#orders').attr('href','/orders?user_id=' + $.getUrlParam('user_id'));
+            getProfile();
+        }
+
     </script>
 
     <script type="text/javascript">
@@ -292,23 +298,14 @@
         #main-nav.nav-tabs.nav-stacked > li {
             margin-bottom: 4px;
         }
-
-        input#search {
-            background-image: url(/icon/search.png);
-            background-repeat: no-repeat;
-            background-size: contain;
-        }
-        input#search:focus {
-            background-image: none;
-        }
     </style>
 
 </head>
-<body>
-<nav class="navbar-inverse visible-lg visible-md visible-sm" role="navigation">
+<body onload="init()">
+<nav class="navbar-inverse" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" style="color: #ffffff" href="#"><span style="font-size: larger">oBook  </span>
+            <a class="navbar-brand" style="color: #ffffff" href="#"><span style="font-size: larger">etherStore  </span>
                 <small style="color: #5e5e5e">your online book store</small></a>
         </div>
 
@@ -318,13 +315,6 @@
             <li><a href="#" id="cart"><span class="glyphicon glyphicon-shopping-cart"></span>Cart</a></li>
             <li><a href="#" id="orders"><span class="glyphicon glyphicon-list-alt"></span>Orders</a></li>
         </ul>
-
-        <form class="navbar-form navbar-left">
-            <div class="form-group">
-                <input type="text" id="search" class="form-control"/>
-            </div>
-            <button type="button" class="btn btn-default">Search</button>
-        </form>
 
         <ul class="nav navbar-nav navbar-right">
             <li>
@@ -336,10 +326,9 @@
 </nav>
 
 <div class="container">
-
     <div class="col-md-3 col-sm-3"  style="margin-top: 180px">
         <ul id="main-nav" class="nav nav-tabs nav-stacked">
-            <li style="margin-top: 30px" id="li_profile">
+            <li style="margin-top: 30px" id="li_profile" class="in active">
                 <a href="#profile" data-toggle="tab"><i class="icon iconfont icon-profile"></i> Profile</a>
             </li>
             <li style="margin-top: 30px;" id="li_store">
@@ -352,7 +341,7 @@
     </div>
 
     <div id="tableContent" class="tab-content">
-        <div class="tab-pane fade" id="profile">
+        <div class="tab-pane fade in active" id="profile">
             <div class="col-md-6 col-md-offset-1 col-sm-6 col-sm-offset-1" style="margin-top: 70px">
                 <dl>
                     <dd class="col-md-4 col-md-offset-3 col-sm-6 col-sm-offset-1">
