--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -68,7 +68,7 @@
 <body onload="sendToken()">
 <div class="container" style="margin-top: 200px">
     <form role="form" id="login_form" class="col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6 form form-horizontal">
-        <h2 class="text-center">oBook<small style="color: white">login</small></h2>
+        <h2 class="text-center">etherStore<small style="color: white">login</small></h2>
         <div class="form-group">
             <img src="../static/icon/phone.png" th:src="@{/icon/phone.png}" class="col-md-2 col-sm-1"/>
             <div class="col-md-10 col-sm-10">
