--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -44,7 +44,7 @@
 <body>
 <div class="container" style="margin-top: 100px">
     <form role="form" id="register_form" class="col-md-offset-4 col-md-4 form-horizontal">
-        <h2 class="text-center">oBook<small style="color: purple">register</small></h2>
+        <h2 class="text-center">etherStore<small style="color: purple">register</small></h2>
         <div class="form-group">
             <div class="col-md-12">
                 <input type="text" class="form-control" name="phone" id="phone" placeholder="*phone" required autofocus>
